--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-google-signin": "^2.1.1",
     "react-native-safe-area-context": "^3.0.3",
     "react-native-screens": "^2.8.0",
     "react-navigation": "^4.3.9",
