--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-native-firebase/auth": "^8.0.7",
     "@react-native-firebase/firestore": "^7.2.1",
     "@react-native-firebase/storage": "^7.1.5",
+    "@react-navigation/native": "^5.6.1",
+    "@react-navigation/stack": "^5.6.2",
     "husky": "^4.2.5",
     "pretty-quick": "^2.0.1",
     "react": "16.11.0",
@@ -24,10 +26,9 @@
     "react-native-google-signin": "^2.1.1",
     "react-native-image-picker": "^2.3.1",
     "react-native-picker-select": "^7.0.0",
+    "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.3",
     "react-native-screens": "^2.8.0",
-    "react-navigation": "^4.3.9",
-    "react-navigation-stack": "^2.7.0",
     "uuid": "^8.1.0",
     "validator": "^13.1.1"
   },
