--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "16.11.0",
     "react-hook-form": "^5.7.2",
     "react-native": "0.62.2",
+    "react-native-fbsdk": "^2.0.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-google-signin": "^2.1.1",
     "react-native-image-picker": "^2.3.1",
