--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.3",
     "react-native-screens": "^2.8.0",
+    "react-transition-group": "^4.4.1",
     "uuid": "^8.1.0",
     "validator": "^13.1.1"
   },
